# PawaIT-Assessment

./: LICENSE  README.md  kenya_tax-KG_schema.md  orgb.sh  orgf.sh  pawait_prd.md  tailwind.md
app/api/: deps.py
app/core/: config.py
app/db/: supabase_client.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: conversation.py
backend/app/core/: security.py
backend/app/llm/: base.py  factory.py
backend/app/schemas/: conversation.py
backend/app/services/: conversation.py
docs/: frontend_design-doc.md  pawaits_prd.md  testing_requirements.md  ui-design_spec.md
frontend/src/app/about/: page.tsx
frontend/src/app/chat/[[...conversationId]]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/chat/: ChatArea.tsx  ChatInput.tsx  FollowUpSuggestions.tsx  MessageBubble.tsx  SuggestedQuestions.tsx
frontend/src/components/guest/: GuestPrompt.tsx
frontend/src/components/layout/: LeftSidebar.tsx  RightSidebar.tsx
frontend/src/components/settings/: LLMSelector.tsx  ThemeToggle.tsx
frontend/src/hooks/: useLocalHistory.ts
frontend/src/lib/: supabaseClient.ts
frontend/src/stores/: chatStore.ts
frontend/src/types/: app.ts
src/contexts/: AuthContext.tsx
src/services/: apiClient.ts
